Auth && Edit profile refactored